syntax = "proto3";

package abi;

option go_package = "./proto;abi";

service Abi {
	rpc ContractAbi(AbiRequest) returns (AbiResponse) {}
}

message AbiRequest {
	string network = 1;
	string address = 2;
	int32 block = 3;
}


message AbiResponse {
	string abi = 1;
}